--- a/RealTech.css
+++ b/RealTech.css
@@ -41,6 +41,7 @@ li {
 }
 
 #section3 {
+  /* border: 2px solid black; */
   display: table;
   /* border-spacing: 10px; */
 }
@@ -82,6 +83,7 @@ li {
 }
 
 #section4 {
+  /* border: 2px solid black; */
   text-align: center;
   margin-top: 40px;
 }
@@ -125,6 +127,7 @@ li {
 }
 
 .card1 button {
+  color: white;
   padding: 10px;
   margin: 10px;
   background-color: rgb(177, 174, 6);
@@ -136,15 +139,11 @@ li {
 #section5 {
   margin: 700px 10px 10px 10px;
   text-align: center;
+  /* border: 2px solid black; */
 }
 
 #section5 p {
   line-height: 3em;
-}
-
-#section6 {
-  margin: 100px 10px 10px 10px;
-  text-align: center;
 }
 #section5 h1 {
   color: rgb(177, 174, 6);
@@ -153,17 +152,60 @@ li {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-#section6 .image {
-  box-sizing: border-box;
-  /* position: absolute; */
-  text-align: center;
-  float: left;
-  width: 30%;
+#section6 {
   padding: 0px;
-  margin: 40px 10px 100px 30px;
+  /* margin: 0px; */
+  margin-top: 40px;
+  margin-left: 50px;
+  margin-right: 20px;
+  text-align: justify;
 }
 
-#footer {
-  margin: 100px 10px 10px 10px;
+#section6 .image11 {
+  /* border: 2px solid black; */
+  box-sizing: border-box;
+  position: relative;
   text-align: center;
+  float: left;
+
+  /* width: 30%; */
+  padding-right: 0px;
+  padding-bottom: 20px;
+  margin: 20px 10px 10px 30px;
+  /* display: inline; */
+}
+#section6 h2 {
+  padding: 0px;
+  font-size: 130%;
+  text-align: left;
+  margin-top: -100px;
+  margin-left: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  /* background-color: rgba(7, 95, 172, 0.7); */
+  color: white;
+  /* border-bottom: 2px solid black; */
+}
+
+.image11 img {
+  width: 330px;
+  height: 300px;
+}
+#footer {
+  /* border: thin solid black; */
+  margin-top: 50px;
+  text-align: center;
+  clear: both;
+  padding-top: 50px;
+}
+#footer ul {
+  /* margin: 100px 10px 10px 10px; */
+  text-align: center;
+}
+
+#footer p {
+  text-align: center;
+  font-weight: lighter;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 40px 0px 30px 0px;
 }
