--- a/allCss/RealTech.css
+++ b/allCss/RealTech.css
@@ -16,6 +16,7 @@ body {
 li {
   display: inline;
   margin: 7px;
+  cursor: pointer;
 }
 #section1 img {
   /* border: 2px solid black; */
@@ -137,7 +138,7 @@ li {
 }
 
 #section5 {
-  margin: 700px 10px 10px 10px;
+  margin: 700px 10px 100px 10px;
   text-align: center;
   /* border: 2px solid black; */
 }
@@ -158,13 +159,14 @@ li {
   margin-top: 40px;
   margin-left: 50px;
   margin-right: 20px;
-  text-align: justify;
+
+  text-align: center;
 }
 
 #section6 .image11 {
   /* border: 2px solid black; */
   box-sizing: border-box;
-  position: relative;
+  /* position: relative; */
   text-align: center;
   float: left;
 
@@ -190,10 +192,12 @@ li {
 .image11 img {
   width: 330px;
   height: 300px;
+  text-align: center;
 }
 #footer {
   /* border: thin solid black; */
   margin-top: 50px;
+  /* margin-bottom: 100px; */
   text-align: center;
   clear: both;
   padding-top: 50px;
