--- a/allCss/createBlog.css
+++ b/allCss/createBlog.css
@@ -1,25 +1,28 @@
 body {
   position: absolute;
-  top: 17%;
+  /* top: 17%; */
   left: 20%;
+  margin: auto;
 }
 
 #tableContainer {
-  padding: 0px 20px 0px 0px;
+  padding: 0px 0px 0px 0px;
   display: table;
   /* border-spacing: 10px; */
-  width: 700px;
-  border: thin solid black;
+  width: 800px;
+  /* height: 600px; */
+  /* border: thin solid black; */
 }
 
 #tableRow {
   display: table-row;
+  height: 610px;
 }
 
 #LeftColumn {
   width: 15%;
   vertical-align: middle;
-  padding: 10px;
+  padding: 15px;
   color: white;
   display: table-cell;
   background-color: rgb(7, 7, 65);
@@ -57,6 +60,7 @@ body {
   border: 2px solid rgb(7, 7, 65);
   font-size: 120%;
   float: right;
+  cursor: pointer;
   margin: 60px 0px 10px 5px;
 }
 
@@ -66,6 +70,7 @@ body {
   border: 2px solid rgb(7, 7, 65);
   font-size: 110%;
   float: right;
+  cursor: pointer;
   padding-left: 15px;
   padding-right: 15px;
   margin: 60px 20px 10px 15px;
