--- a/allCss/admin.css
+++ b/allCss/admin.css
@@ -23,6 +23,7 @@ body {
   vertical-align: middle;
   display: table-cell;
   width: 12%;
+  /* margin: auto; */
   padding: 10px;
   background-color: rgb(7, 7, 65);
 }
@@ -78,6 +79,7 @@ body {
 } */
 
 .part1 img {
+  flex: 1;
   /* margin-right: 10px; */
   width: 130px;
   height: 100px;
@@ -87,19 +89,22 @@ body {
 .part1 span {
   line-height: 0.3em;
   float: right;
+  flex: 4;
   /* display: inline; */
   /* display: flex; */
-  padding: 0px 140px 0px 10px;
+  padding: 0px 20px 0px 10px;
   margin-left: 10px;
   /* flex-direction: top right; */
 }
 .part1 button {
+  flex: 1;
+  /* margin-left: auto; */
   cursor: pointer;
   position: relative;
   bottom: -32px;
   float: right;
   border-radius: 20px;
-  margin: 5px 0px 0px 10px;
+  margin: 5px 7px 0px 10px;
   border-style: none;
   width: 14%;
   color: white;
