--- a/allCss/createBlog.css
+++ b/allCss/createBlog.css
@@ -41,7 +41,10 @@ body {
   color: rgb(7, 7, 65);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-#RightColumn input {
+/* #RightColumn input { */
+.Title,
+.Img,
+.Dess {
   border-radius: 25px;
   border-style: none;
   border: 2px solid rgb(7, 7, 65);
@@ -49,7 +52,7 @@ body {
   margin: 10px;
 }
 
-.description {
+.Dess {
   width: 90%;
   height: 90px;
 }
