--- a/allCss/createBlog.css
+++ b/allCss/createBlog.css
@@ -57,7 +57,7 @@ body {
   height: 90px;
 }
 
-.cancelbu {
+.backbu {
   background-color: white;
   color: rgb(7, 7, 65);
   border: 2px solid rgb(7, 7, 65);
@@ -67,7 +67,7 @@ body {
   margin: 60px 0px 10px 5px;
 }
 
-.addbu {
+.editbu {
   background-color: rgb(7, 7, 65);
   color: white;
   border: 2px solid rgb(7, 7, 65);
