--- a/allCss/Blog.css
+++ b/allCss/Blog.css
@@ -18,7 +18,11 @@ li {
   margin: 7px;
 }
 
-#blog {
+.card-container {
+  width: 100%;
+}
+
+.blog {
   border: 2px solid lightgray;
   box-sizing: border-box;
   /* padding-left: 200px; */
@@ -31,37 +35,28 @@ li {
   /* border-spacing: 10px; */
 }
 
-#tableRow {
-  display: table-row;
+.tableRow {
+  display: flex;
   height: 350px;
 }
 
-#LeftColumn {
+.LeftColumn {
   /* border: thin solid black; */
-  /* width: 50%; */
 
-  display: table-cell;
-  /* background: #efe5d0 url(images/background.gif) top left; */
-  /* font-size: 105%; */
-  /* padding: 55px; */
+  flex-basis: 60%;
+
   vertical-align: top;
-  margin: 0px 10px 10px 10px;
+  /* margin: 0px 10px 10px 10px; */
 }
 
-#LeftColumn img {
-  float: left;
-  width: 400px;
-  height: 350px;
-  text-align: center;
-  /* position: relative; */
+.Img {
+  /* float: left; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-#RightColumn {
-  /* border: thin solid black; */
-
-  /* display: table-cell; */
-  /* background: #efe5d0 url(images/background.gif) bottom right; */
-  /* font-size: 105%; */
-  /* padding: 50px; */
+.RightColumn {
+  flex-basis: 50%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: justify;
   padding: 90px 30px 0px 30px;
@@ -70,14 +65,14 @@ li {
   /* margin: 0px 10px 10px 10px; */
 }
 
-#RightColumn h1 {
+.Title {
   color: black;
   font-size: 140%;
   font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-#RightColumn p {
+.Para {
   color: gray;
   font-weight: lighter;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
