--- a/allCss/createBlog.css
+++ b/allCss/createBlog.css
@@ -67,7 +67,7 @@ body {
   margin: 60px 0px 10px 5px;
 }
 
-.editbu {
+.editbu .addbu {
   background-color: rgb(7, 7, 65);
   color: white;
   border: 2px solid rgb(7, 7, 65);
