--- a/allCss/Blog.css
+++ b/allCss/Blog.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   padding: 0px;
   margin: 0px;
@@ -16,6 +20,21 @@ body {
 li {
   display: inline;
   margin: 7px;
+  font-size: large;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+a:link {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .card-container {
@@ -66,6 +85,7 @@ li {
 }
 
 .Title {
+  cursor: pointer;
   color: black;
   font-size: 140%;
   font-weight: normal;
