--- a/allCss/createBlog.css
+++ b/allCss/createBlog.css
@@ -1,7 +1,7 @@
 body {
   position: absolute;
   /* top: 17%; */
-  left: 20%;
+  /* left: 20%; */
   margin: auto;
 }
 
@@ -67,7 +67,19 @@ body {
   margin: 60px 0px 10px 5px;
 }
 
-.editbu .addbu {
+.addbu {
+  background-color: rgb(7, 7, 65);
+  color: white;
+  border: 2px solid rgb(7, 7, 65);
+  font-size: 110%;
+  float: right;
+  cursor: pointer;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 60px 20px 10px 15px;
+}
+
+.editbu {
   background-color: rgb(7, 7, 65);
   color: white;
   border: 2px solid rgb(7, 7, 65);
