--- a/allCss/firstblog.css
+++ b/allCss/firstblog.css
@@ -16,6 +16,20 @@ body {
 li {
   display: inline;
   margin: 7px;
+  font-size: large;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+a:link {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
 }
 
 #firstblog {
